--- a/src/app/listar-usuarios/listar-usuarios.component.html
+++ b/src/app/listar-usuarios/listar-usuarios.component.html
@@ -1,1 +1,23 @@
 <p>listar-usuarios works!</p>
+
+<table class="table">
+  <thead>
+    <tr>
+      <td>ID</td>
+      <td>Nome</td>
+      <td>Idade</td>
+      <td>Perfil</td>
+      <td>Ação</td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let row of listaUsuarios">
+
+      <td>{{row.id}}</td>
+      <td>{{row.nome}}</td>
+      <td>{{row.idade}}</td>
+      <td>{{row.perfil}}</td>
+      <td><button class="btn btn-primaty">Editar</button></td>
+    </tr>
+  </tbody>
+</table>
