Criando componente para cadastrar

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,5 +7,9 @@ main works!
             <app-listar-usuarios></app-listar-usuarios>
         </div>
     </div>
-
+    <div class="row">
+      <div class="col-12">
+        <app-cadastro-usuarios></app-cadastro-usuarios>
+      </div>
+    </div>
 </div>
