--- a/src/app/listar-usuarios/listar-usuarios.component.html
+++ b/src/app/listar-usuarios/listar-usuarios.component.html
@@ -26,6 +26,14 @@
         >
           Editar
         </button>
+
+        <button
+        type="button"
+        class="btn btn-primary"
+        (click)="excluir(row.id)"
+      >
+        Excluir
+      </button>
       </td>
     </tr>
   </tbody>
