--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,4 +12,10 @@ main works!
         <app-cadastro-usuarios></app-cadastro-usuarios>
       </div>
     </div>
+    <div class="row">
+      <div class="col-12">
+        <app-lista-usuarios-admin></app-lista-usuarios-admin>
+      </div>
+    </div>
 </div>
+
